@@ -52,6 +52,7 @@ import com.vividsolutions.jump.util.StringUtil;
 import com.vividsolutions.jump.workbench.ui.WorkbenchFrame;
 import com.vividsolutions.jump.workbench.ui.cursortool.DragTool;
 import com.vividsolutions.jump.workbench.ui.images.IconLoader;
+import com.vividsolutions.jump.workbench.ui.images.famfam.IconLoaderFamFam;
 import com.vividsolutions.jump.workbench.ui.renderer.RenderingManager;
 import com.vividsolutions.jump.workbench.ui.renderer.ThreadQueue;
 /**
@@ -83,7 +84,8 @@ public class ZoomRealtimeTool extends DragTool
   }
 
   public Icon getIcon() {
-    return IconLoader.icon("Magnify3.gif");
+    //return IconLoader.icon("Magnify3.gif");
+	  return IconLoaderFamFam.icon("map_magnify.png");
   }
 
   public boolean isRightMouseButtonUsed() {                              
