@@ -1,8 +1,13 @@
-2008-10-12 mentaer <sstein@geo.uzh.ch>
+2008-10-13 mentaer <sstein@geo.uzh.ch>
+	Added new main toolbar icon set. 
+	(note: Class SelectFeaturesTool	was copied and renamed to 
+	SelectFeaturesToolEditToolbox as one can handle only one icon size)  
+	
+2008-10-13 mentaer <sstein@geo.uzh.ch>
 	did some refactoring of the Edit menu (put Selection and
 	Extraction tools into sub menus)
 	
-2008-10-12 mentaer <sstein@geo.uzh.ch>
+2008-10-13 mentaer <sstein@geo.uzh.ch>
 	added Larry's ClipToFencePlugIn from ISA Tools
 	org.openjump.core.ui.plugin.edit.ClipToFencePlugIn
 	
